tests/cases/smoke/invalid/func_unknown_named_arg.dp
func greet(name: str, title: str = "Mr") -> str = title + " " + name
var bad = greet(username: "Youniss", title: "Dr")
